z-index fixes

--- a/src/Components/VideoHolder/Tooltips/Tooltips.css
+++ b/src/Components/VideoHolder/Tooltips/Tooltips.css
@@ -1,6 +1,6 @@
 .d-inline-block {
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     left: 5vw;
     top: 45vw;
 }
@@ -12,7 +12,7 @@
     font-family: "BNRomaineRegular";
     font-size: 1.5vw;
     line-height: 1.5vw;
-    z-index: 1;
+    z-index: 4;
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
