--- a/src/Components/VideoHolder/VideoHolder.css
+++ b/src/Components/VideoHolder/VideoHolder.css
@@ -32,6 +32,8 @@ video {
 }
 
 .poster-image {
+  width: 100%;
   height: 50vw;
-  visibility: hidden;
+  opacity: 0.1;
+  z-index: 1;
 }
